# 2-DQBF-Solving-and-Certification-via-Property-Directed-Reachability-Analysis

./: .gitignore  CMakeLists.txt  README.md  download_avr.sh  run_exp.py
inc/: DQBF.hpp  algorithm.hpp  avr_wrapper.hpp  utils.hpp
src/: DQBF.cpp  algorithm.cpp  avr_wrapper.cpp  dqcir_parser.cpp  dqdimacs_parser.cpp  main.cpp  utils.cpp
testcases/: test.dqcir
testcases/2_colourability/sat/: 002_sat.dqcir  003_sat.dqcir  004_sat.dqcir  005_sat.dqcir  006_sat.dqcir  007_sat.dqcir  008_sat.dqcir  009_sat.dqcir  010_sat.dqcir  011_sat.dqcir  012_sat.dqcir  013_sat.dqcir  014_sat.dqcir  015_sat.dqcir  016_sat.dqcir  017_sat.dqcir  018_sat.dqcir  019_sat.dqcir  020_sat.dqcir  021_sat.dqcir  022_sat.dqcir  023_sat.dqcir  024_sat.dqcir  025_sat.dqcir  026_sat.dqcir  027_sat.dqcir  028_sat.dqcir  029_sat.dqcir  030_sat.dqcir  031_sat.dqcir  032_sat.dqcir  033_sat.dqcir  034_sat.dqcir  035_sat.dqcir  036_sat.dqcir  037_sat.dqcir  038_sat.dqcir  039_sat.dqcir  040_sat.dqcir  041_sat.dqcir  (+85 more)
testcases/2_colourability/sat_tseitin/: 002_sat_tseitin.dqdimacs  003_sat_tseitin.dqdimacs  004_sat_tseitin.dqdimacs  005_sat_tseitin.dqdimacs  006_sat_tseitin.dqdimacs  007_sat_tseitin.dqdimacs  008_sat_tseitin.dqdimacs  009_sat_tseitin.dqdimacs  010_sat_tseitin.dqdimacs  011_sat_tseitin.dqdimacs  012_sat_tseitin.dqdimacs  013_sat_tseitin.dqdimacs  014_sat_tseitin.dqdimacs  015_sat_tseitin.dqdimacs  016_sat_tseitin.dqdimacs  017_sat_tseitin.dqdimacs  018_sat_tseitin.dqdimacs  019_sat_tseitin.dqdimacs  020_sat_tseitin.dqdimacs  021_sat_tseitin.dqdimacs  022_sat_tseitin.dqdimacs  (+105 more)
(+2361 files in other folders)
